--- a/src/globStyles/vars.scss
+++ b/src/globStyles/vars.scss
@@ -14,11 +14,11 @@ $tablet: 768px;
 $laptop: 1024px;
 
 //Reusable styles
-@mixin pageWrapper($isContentHolder: false) {
+@mixin pageWrapper($isPageFiller: false) {
   width: 85%;
   margin-left: auto;
   margin-right: auto;
-  @if $isContentHolder==true {
+  @if $isPageFiller==true {
     flex: 1 0 auto;
   } @else {
     flex-shrink: 0;
